--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,22 @@ code {
 .margin {
   margin: 8px;
 }
+a {
+  text-decoration: none;
+}
+a:link {
+  color: white;
+}
+a:visited {
+  color: white;
+}
+
+/* mouse over link */
+a:hover {
+  color: white;
+}
+
+/* selected link */
+a:active {
+  color: white;
+}
