--- a/src/pages/Projects.scss
+++ b/src/pages/Projects.scss
@@ -34,3 +34,30 @@
   animation-name: bounce;
   -moz-animation-name: bounce;
 }
+
+.rainbow {
+  text-decoration: none;
+  background: #f497da;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.rainbow:hover {
+  margin-top: 0px;
+
+  background: linear-gradient(
+    to right,
+    #ef5350,
+    #f48fb1,
+    #7e57c2,
+    #2196f3,
+    #26c6da,
+    #43a047,
+    #eeff41,
+    #f9a825,
+    #ff5722
+  );
+
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: all 1s ease-in;
+}
